<resources>
    <string name="app_name" translatable="false">Bulkapedia</string>
    <string name="language">en</string>
    <string name="select_hero">Select hero</string>
    <string name="select_map">Select map</string>
    <string name="ignore_personal_gears">Ignore personal gears</string>
    <string name="hide_effects">Hide effects</string>
    <string name="battle_royale_mode">Battle Royale</string>
    <string name="squad_mode">Squad</string>
    <string name="kings_of_hill_mode">Kings Of Hill</string>
    <string name="all_modes">Universal</string>
    <string name="menu_gears">Gears</string>
    <string name="menu_maps">Maps</string>
    <string name="show_spawns">Show spawns</string>
    <string name="hide_spawns">Hide spawns</string>
    <string name="settings_text">Text</string>
    <string name="settings">Settings</string>
    <string name="lang">Language</string>
    <string name="lang_summery">Select the interface language</string>
    <string name="russian_lang">Russian</string>
    <string name="english_lang">English</string>
    <string name="effects">Effects</string>
    <string name="damage_effect">to the main damage</string>
    <string name="armor_damage_effect">to armor damage</string>
    <string name="health_damage_effect">to health damage</string>
    <string name="max_health_effect">to the maximum amount of health</string>
    <string name="max_armor_effect">to the maximum amount of armor</string>
    <string name="add_health_effect">health per second</string>
    <string name="add_armor_effect">armor per second</string>
    <string name="speed_effect">to the speed of movement</string>
    <string name="speed_in_focus_effect">to the speed of movement with aimed shooting</string>
    <string name="spread_in_move_effect">to fire spread while moving</string>
    <string name="spread_in_focus_effect">to aimed fire spread</string>
    <string name="spread_in_not_focus_effect">to bullet spread without aiming</string>
    <string name="visibility_effect">to hero\'s vision range</string>
    <string name="piercing_effect">to armor penetration</string>
    <string name="fire_rate_effect">to fire rate</string>
    <string name="fire_range_focus_effect">to hero\'s aimed fire range</string>
    <string name="fire_range_effect">to firing range</string>
    <string name="aiming_speed_effect">to aiming time</string>
    <string name="running_volume_effect">to hero\'s running loudness</string>
    <string name="time_up_ammo_effect">to ammo pickup time</string>
    <string name="time_up_bust_effect">to pickup time for upgrades</string>
    <string name="reloading_time_effect">to reloading time</string>
    <string name="piercing_power_effect">to piercing power</string>
    <string name="add_patrons_effect">to clip size</string>
    <string name="max_damage_grenade_effect">to the maximum damage dealt with the grenade</string>
    <string name="max_radius_grenade_effect">to the explosion radius of the grenade</string>
    <string name="max_damage_rocket_effect">to the maximum damage for the rocket</string>
    <string name="max_radius_rocket_effect">to the explosion radius of the rocket</string>
    <string name="jump_distance_effect">to your maximum jump distance with the blink</string>
    <string name="jump_damage_effect">to enemies health upon landing after using the blink</string>
    <string name="speed_after_jump_effect">to your hero\'s movement speed after using the breakaway</string>
    <string name="invisible_duration_effect">to the duration of the invisibility</string>
    <string name="invisible_damage_effect">to damage after using the invisibility</string>
    <string name="speed_after_invisible_effect">to your hero\'s movement speed after using the invisibility</string>
    <string name="scan_radius_effect">to the enemies revealing radius when using the scan</string>
    <string name="scan_damage_effect">to damage against revealed heroes when using the scan</string>
    <string name="scan_duration_effect">to the duration of the scan</string>
    <string name="vision_duration_effect">to the duration of the thermal vision</string>
    <string name="piercing_vision_effect">to piercing power when the thermal vision is activated</string>
    <string name="wall_duration_effect">to the duration of the force field</string>
    <string name="shield_duration_effect">to the duration of the shield</string>
    <string name="wall_protection_effect">to the durability of the wall of energy of the force field</string>
    <string name="shield_protection_effect">to shield\'s durability of the force shield</string>
    <string name="fire_range_while_wall_effect">to fire range when the force field is activated </string>
    <string name="turret_damage_effect">to turret\'s damage when using the turret</string>
    <string name="turret_health_effect">to turret\'s armor and health when using the turret</string>
    <string name="piercing_on_suppression_effect">to piercing power when using the suppression</string>
    <string name="reloading_after_suppression_effect">to reload time when the suppression is activated</string>
    <string name="team_health_up_effect">to restore armor and health per seconds when team recovery is activated</string>
    <string name="health_after_team_health_effect">to restore armor and health after using the team recovery</string>
    <string name="stimulator_health_effect">to health regen per second when the stim is activated</string>
    <string name="stimulator_speed_effect">to your hero\'s movement speed after activating the stim</string>
    <string name="band_running_volume_effect">to your hero\'s movement loudness after using the bandage</string>
    <string name="band_health_up_effect">to restore health when the bandage is activated</string>
    <string name="max_health_after_tank_heal_effect">to maximum armor and health after using the battle kit</string>
    <string name="tank_heal_on_activate_effect">to restore health and armor when the battle kit is activated</string>
    <string name="buff_damage_trooper_effect">to incoming damage while the team healing</string>
    <string name="buff_health_trooper_effect">to health regen per second when the team healing is activated</string>
    <string name="arnie">Arnie</string>
    <string name="cyclops">Cyclops</string>
    <string name="sparkle">Sparkle</string>
    <string name="hurricane">Hurricane</string>
    <string name="ghost">Ghost</string>
    <string name="freddie">Freddie</string>
    <string name="angel">Angel</string>
    <string name="raven">Raven</string>
    <string name="blot">Blot</string>
    <string name="firefly">Firefly</string>
    <string name="slayer">Slayer</string>
    <string name="mirage">Mirage</string>
    <string name="smog">Smog</string>
    <string name="dragoon">Dragoon</string>
    <string name="bastion">Bastion</string>
    <string name="bertha">Bertha</string>
    <string name="leviathan">Leviathan</string>
    <string name="stalker">Stalker</string>
    <string name="doc">Doc</string>
    <string name="levi">Levi</string>
    <string name="satoshi">Satoshi</string>
    <string name="hotel">Hotel</string>
    <string name="bank">Bank</string>
    <string name="city">City</string>
    <string name="city_garden">City Garden</string>
    <string name="village">Village</string>
    <string name="police_station">Police Station</string>
    <string name="railway_station">Railway Station</string>
    <string name="casino">Casino</string>
    <string name="road_motel">Road Motel</string>
    <string name="villa">Villa</string>
    <string name="sawmill">Sawmill</string>
    <string name="hospital">Hospital</string>
    <string name="sewerage">Sewerage</string>
    <string name="classical_set">Classic</string>
    <string name="recommended_set">Recommended</string>
    <string name="healing_set">Survivability</string>
    <string name="damage_set">Damage</string>
    <string name="squad_set">Squad</string>
    <string name="universe_set">Universal</string>
    <string name="protective_set">Protection</string>
    <string name="fire_range_set">Fire range</string>
    <string name="spread_set">Min Spread</string>
    <string name="clip_size_set">More bullets</string>
    <string name="description_set">Description:</string>
    <string name="arnie_classical_set_desc">The optimal set without personal equipment.\n\n
        It has good damage both in health and armor, as well as increases visibility.\n\n
        Suitable for modes: BR, Kings Of HIll, SABOTAGE</string>
    <string name="arnie_survivability_set_desc">A good set if you want to have a lot of health.\n\n
        It has a lot of health, as well as a good rate of fire and movement speed, also increases visibility.\n\n
        Suitable for modes: BR, KH, SABO</string>
    <string name="arnie_damage_set_desc">A set in which you will kill everyone and everything.\n\n
        It has a lot of damage, both in armor and in health.\n\n
        Suitable for all modes</string>
    <string name="cyclops_classical_set_desc">The optimal set without personal equipment.\n\n
        It has good damage both in health and armor, as well as increases visibility.\n\n
        Suitable for modes: BR, KH, SABO</string>
    <string name="cyclops_recommended_set_desc">A good set if you want to have a lot of health.\n\n
        It has a lot of health, as well as a good rate of fire and movement speed, also increases visibility.\n\n
        Suitable for modes: BR, KH, SABO</string>
    <string name="sparkle_classical_set_desc">The optimal set without personal equipment.\n\n
        It has good damage both in health and armor, as well as increases visibility.\n\n
        Suitable for modes: BR, KH, SABO</string>
    <string name="sparkle_recommended_set_desc">A good set if you want to have a lot of health.\n\n
        It has a lot of health, as well as a good rate of fire and movement speed, also increases visibility.\n\n
        Suitable for modes: BR, KH, SABO</string>
    <string name="hurricane_classical_set_desc">The optimal set without personal equipment.\n\n
        Has a good overview and damage.\n\n
        Suitable for modes: BR, KH</string>
    <string name="hurricane_recommended_set_desc">A popular set.\n\n
        It has 3 cartridges in the clip, which allows you to kill everyone, as well as greater movement speed, more damage and the radius of grenades.\n\n
        Suitable for all modes</string>
    <string name="ghost_classical_set_desc">The optimal set without personal equipment.\n\n
        It has excellent movement speed, as well as armor-piercing damage.\n\n
        Suitable for modes: BR, KH</string>
    <string name="ghost_recommended_set_desc">Recommended set.\n\n
        The set allows you to imagine the hero as he was before nerf (meta).\n\n
        Suitable for all modes</string>
    <string name="freddie_classical_set_desc">The optimal set without personal equipment.\n\n
        It has excellent movement speed, visibility, as well as damage.\n\n
        Suitable for modes: BR, KH</string>
    <string name="freddie_recommended_set_desc">Recommended set.\n\n
        It has a good overview, survivability, -scatter and damage.\n\n
        Suitable for all modes</string>
    <string name="angel_classical_set_desc">The optimal set without personal equipment.\n\n
        It has excellent movement speed, damage, as well as more ammo, which is a huge plus for this hero, since he has few ammo.\n\n
        Also, instead of an echo radar, you can put a gas grenade, depending on your preferences.\n\n
        Suitable for all modes</string>
    <string name="angel_protection_set_desc">The optimal set with personal equipment.\n\n
        It has excellent movement speed, visibility, as well as a durable shield.\n\n
        Suitable for SQUAD mode</string>
</resources>